Fixed showBoard() not showing new status

--- a/data_privacy_styles.css
+++ b/data_privacy_styles.css
@@ -1,3 +1,15 @@
 #data-privacy {
     margin: 32px;
 }
+
+h2 {
+    font-size: 2em;
+}
+
+h3 {
+    font-size: 1.2em;
+}
+
+h4 {
+    font-size: 1.1em;
+}
