--- a/legal_notice_styles.css
+++ b/legal_notice_styles.css
@@ -1,3 +1,7 @@
 .legal-notice {
     margin: 32px;
 }
+
+h2 {
+    font-size: 2em;
+}
